# LyoBackendJune

./: .dockerignore  .env.development  .env.example  .env.production  .env.production.example  .env.production.template  .env.simple  .env.staging  .env.template  .env.test  .env.unified.template  .gcloudignore  .gitignore  .railwayignore  A2A_TRANSLATION_COMPLETE.md  A2A_WORKFLOW_COMPLETE.md  A2UI_ANALYSIS_EXECUTIVE_SUMMARY.md  A2UI_DEBUG_REPORT.md  A2UI_INTEGRATION_SUMMARY.md  A2UI_PRESSURE_POINTS_RESOLVED.md  A2UI_VOICE_INTEGRATION.swift  A2UI_iOS_INTEGRATION_GUIDE.md  AI_CLASSROOM_IMPLEMENTATION.md  AI_FINAL_DEPLOYMENT_GUIDE.md  AI_INTEGRATION_SUCCESS_REPORT.py  AI_OPTIMIZATION_COMPLETION.md  AI_OPTIMIZATION_GUIDE.md  AI_PRODUCTION_GUIDE.md  AI_STUDY_MODE_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE_AUDIT_PHASE1.md  BACKEND_ANALYSIS_COMPLETE.md  BACKEND_AUDIT_2026-03-29.md  BACKEND_COMPLETION_PROMPT.md  BACKEND_FRONTEND_COMPATIBILITY_ANALYSIS.md  BACKEND_TEST_REPORT.md  CAPABILITY_HANDSHAKE_SYSTEM.swift  CICD_FIX_INSTRUCTIONS.md  CLIENT_INTEGRATION_GUIDE.md  CLOUD_BUILD_FIXES_REPORT.py  CLOUD_RUN_FIX_SUMMARY.md  (+599 more)
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_PHASE2.md  README.md
.new_venv/: pyvenv.cfg
LyoBackend-Deploy/: alembic.ini  cloud-build-update.sh  minimal-deploy.sh
Sources/: LyoApp.swift
ai_training/: README.md  prepare_dataset.py  sample_dataset.jsonl  train_lora.py
alembic/: env.py
datasets/: combined_training.json  content_classification.json  learning_paths.json  metadata.json  search_enhancement.json  tutoring_conversations.json
(+815 files in other folders)
